# defi-wallet-core-rs

./: CHANGELOG.md  Cargo.toml  Makefile
.github/workflows/: android-build.yml
android/MyAndroid/: Cargo.toml
android/MyJava/: Cargo.toml
android/MyJava/src/: main.rs
android/MyKotlin/: save.sh
android/MyKotlin/app/: build.gradle
android/MyKotlin/gradle/wrapper/: gradle-wrapper.properties
android/MyKotlin/mylibrary/: build.gradle
android/MyWallet/app/: build.gradle
android/MyWallet/app/src/main/: AndroidManifest.xml
android/MyWallet/gradle/wrapper/: gradle-wrapper.properties
bindings/cpp/: Cargo.toml  build.rs  compile.sh
bindings/cpp/AndroidSecureStorage/: compile.sh
bindings/cpp/AndroidSecureStorage/app/: build.gradle
bindings/cpp/AndroidSecureStorage/gradle/wrapper/: gradle-wrapper.properties
bindings/cpp/examples/: swap.rs
bindings/cpp/include/: android.h
bindings/cpp/src/: android.cc  ethereum.rs  lib.rs
bindings/wasm/: Cargo.toml
common/: Cargo.toml
common/src/: common.udl  contract.rs  wallet.rs
common/src/node/: cosmos_sdk.rs  nft.rs
common/src/node/cosmos_sdk/: balance_query.rs
common/src/node/ethereum/: abi.rs  provider.rs  utils.rs
common/src/transaction/: ethereum.rs
common/src/transaction/ethereum/: abi_contract.rs  error.rs
contracts/contracts/: TestERC721.sol
example/cpp-example/: cronos.cc  helper.py  main.cc  wallet.cc
my/: Cargo.toml
my/my/: Cargo.toml
my/src/: main.rs
proto/: Cargo.toml
proto-build/: Cargo.toml
scripts/: .env  .env.example
(+10 files in other folders)
