[package]
name = "my"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defi-wallet-core-common = { path = "../common" , features=["login","abi-contract"]}
anyhow = "1"
serde="1"
serde_json="1"
siwe = { version = "0.5" }
ethers = { version = "0.17", features = ["rustls"] }
hex = "0.4"
tokio = { version = "1", features = ["rt"] }
